<resources>
    <string name="app_name">Assist SDK</string>
    <string name="versions">%1$s\n%2$s</string>

    <string name="unknown_error">Неизвестная ошибка</string>
    <string name="empty_field">Не заполнено поле %1$s</string>
    <string name="no_samsung_pay">SamsungPay не доступен</string>
    <string name="no_google_pay">GooglePay не доступен</string>
    <string name="no_mir_pay">MirPay не доступен</string>
    <string name="order_is_deleted">Заказ %1$s удалён</string>

    <string name="server_url_label">Сервер:</string>
    <string name="merchant_id_label">Номер магазина в Ассист (Merchant ID):</string>
    <string name="login_label">Пользователь:</string>
    <string name="password_label">Пароль:</string>
    <string name="order_number_label">Номер заказа:</string>
    <string name="order_amount_label">Сумма заказа:</string>
    <string name="order_items_label">Позиции заказа:</string>
    <string name="use_camera_cb_label">Сканировать карту</string>
    <string name="order_comment_label">Комментарий:</string>
    <string name="signature_label">Подпись данных заказа:</string>
    <string name="link_label">Ссылка на существующий заказ:</string>
    <string name="customer_number_label">Номер покупателя:</string>
    <string name="last_name_label">Last name:</string>
    <string name="first_name_label">First name:</string>
    <string name="middle_name_label">Middle name:</string>
    <string name="email_label">E-mail:</string>
    <string name="address_label">Address:</string>
    <string name="home_phone_label">Home phone:</string>
    <string name="work_phone_label">Work phone:</string>
    <string name="mobile_phone_label">Mobile phone:</string>
    <string name="fax_label">Fax:</string>
    <string name="country_label">Country:</string>
    <string name="state_label">State:</string>
    <string name="city_label">City:</string>
    <string name="zip_label">Zip:</string>
    <string name="taxpayer_id_label">Taxpayer ID:</string>
    <string name="customer_doc_id_label">Customer doc ID:</string>
    <string name="payment_address_label">Payment address:</string>
    <string name="payment_place_label">Payment place:</string>
    <string name="cashier_label">Cashier:</string>
    <string name="cashier_inn_label">Cashier INN:</string>
    <string name="payment_terminal_label">Payment terminal:</string>
    <string name="transfer_operator_phone_label">Transfer operator phone:</string>
    <string name="transfer_operator_name_label">Transfer operator name:</string>
    <string name="transfer_operator_address_label">Transfer operator address:</string>
    <string name="transfer_operator_inn_label">Transfer operator INN:</string>
    <string name="payment_receiver_operator_phone_label">Payment receiver operator phone:</string>
    <string name="payment_agent_phone_label">Payment agent phone:</string>
    <string name="payment_agent_operation_label">Payment agent operation:</string>
    <string name="supplier_phone_label">Supplier phone:</string>
    <string name="payment_agent_mode_label">Payment agent mode:</string>
    <string name="document_requisite_label">Document requisite:</string>
    <string name="user_requisites_label">User requisites:</string>
    <string name="company_name_label">Company name:</string>
    <string name="language_label">Язык:</string>
    <string name="payment_mode_label">Payment mode:</string>
    <string name="yoomoney_label">YooMoney</string>
    <string name="webmoney_label">WebMoney</string>
    <string name="qiwi_label">QIWI</string>
    <string name="qiwi_mts_label">QIWI MTS</string>
    <string name="qiwi_megafon_label">QIWI Megafon</string>
    <string name="qiwi_beeline_label">QIWI Beeline</string>
    <string name="mirpay_label">MirPay</string>
    <string name="fastpay_label">СБП</string>
    <string name="generate_receipt_label">Generate receipt:</string>
    <string name="receipt_line_label">Receipt line:</string>
    <string name="tax_label">Tax:</string>
    <string name="fpmode_label">FPMode:</string>
    <string name="taxation_system_label">Taxation system:</string>
    <string name="prepayment_label">Предоплата:</string>
    <string name="ext_info_label">Доп. информация:</string>
    <string name="order_status_label">Статус заказа:</string>

    <string name="customer">Покупатель</string>
    <string name="other">Остальное</string>
    <string name="result">Результат</string>
    <string name="withSpace">%1$s %2$s</string>

    <string name="storage_btn_text">Журнал заказов</string>
    <string name="pay_web_btn_text">WEB Оплата</string>
    <string name="pay_mir_btn_text">Оплатить с MirPay</string>
    <string name="pay_google_btn_text">Оплатить с GooglePay</string>
    <string name="pay_samsung_btn_text">Оплатить с SamsungPay</string>
    <string name="decline_btn_text">Отказ от заказа</string>
    <string name="refresh_btn_text">Обновить</string>
    <string name="back_btn_text">Назад</string>

    <string name="merchant_id_hint">123456</string>
    <string name="login_hint">mylogin</string>
    <string name="password_hint">mypassword</string>
    <string name="order_number_hint">abc123</string>
    <string name="order_amount_hint">0.01</string>
    <string name="currency_hint">RUB</string>
    <string name="link_hint">https://mylink</string>
    <string name="last_name_hint">Ivanova</string>
    <string name="first_name_hint">Ivanka</string>
    <string name="middle_name_hint">Ivanovna</string>
    <string name="email_hint">ivanka@ivcorp.zz</string>
</resources>